swaggerを更新することを確認
