# server/src/users/dtos/response-user.dto.ts
@@ -1,0 +1,7 @@
+import { PickType } from '@nestjs/swagger'
+import { UserEntity } from '../entities/user.entity'
+
+export class UserResponseDto extends PickType(UserEntity, [
+  'firstName',
+  'lastName',
+]) {}
