# server/src/users/users.controller.ts
@@ -1,4 +1,7 @@
-import { Controller, Get, Param } from '@nestjs/common'
+import { Body, Controller, Get, Param, Post } from '@nestjs/common'
+
+import { CreateUserDto } from './dtos/create-user.dto'
+import { UserResponseDto } from './dtos/response-user.dto'
 import { UsersService } from './users.service'
 
 @Controller('users')
@@ -6,11 +9,16 @@ export class UsersController {
   constructor(private readonly usersService: UsersService) {}
 
   @Get()
-  async findAll() {
+  async findAll(): Promise<UserResponseDto[]> {
     return this.usersService.findAll()
   }
   @Get('id')
-  async findOne(@Param('id') id: string) {
+  async findOne(@Param('id') id: string): Promise<UserResponseDto> {
     return this.usersService.findOne({ id })
+  }
+
+  @Post()
+  async create(@Body() createUserDto: CreateUserDto) {
+    return this.usersService.create(createUserDto)
   }
 }
